Beta Fixes Round 3
Fix typo in afk help text
Fix typo preventing volume from updating
Fix mention styling with no theme
Add styling to the tsLogBook
alertSnag should send Post, not Notify
Shuffle styles between inputs/panels
Add new auto-afk idle timer system

--- a/styles/engine/_colorize.sass
+++ b/styles/engine/_colorize.sass
@@ -44,6 +44,8 @@ body.th-none
 		text-shadow: none !important
 	#{$tt-bg-main}
 		background: $accent !important
+	#{$tt-bg-curr}
+		background: rgba($accent, 0.2) !important
 	#{$tt-gradient}
 		@include gradient($accent)
 	#{$tt-filter-main}
