--- a/styles/engine/_extends.sass
+++ b/styles/engine/_extends.sass
@@ -29,6 +29,8 @@ $tt-gradient: "#buddyListHeader"
 
 $tt-bg-main: ".tab-item:active, .tab-item.selected, #settings .dropdown .option a:hover, .room-tab .flat-button:hover, .floating-menu .option:hover, .floating-menu .option.special:hover, .split-option .options .option:hover, #ding-menu .option.selected, .split-option .options .option.selected, #playlist-dropdown .option.active, .song .scoregood, .options .option:hover, .guestOption.option:hover, #overlay .modal"
 
+$tt-bg-curr: ".chat .message.mention"
+
 $tt-co-main: "#maindiv a, .buddyListRoom .buddyRoomName"
 
 $tt-co-lite: "#playlist #playlist-dropdown .option.active .playlist-label, #ding-menu .option:hover .description, #settings .dropdown .option a:hover, .song .scoregood, .options .option:hover, #maindiv .guestOption.option:hover, #topBG .roomListItem:hover .listenNow"
