--- a/visual/_logger.sass
+++ b/visual/_logger.sass
@@ -2,13 +2,17 @@
 
 #tsLogBook
 	display: none
-	font-weight: bolder
-	margin: 0 15px 25px
-	text-transform: uppercase
+	margin: 10px 15px 25px
 
 #tsLogBook h3
-	font-size: 10px
-	padding: 0 0 5px 10px
+	padding: 0 0 10px 10px
+
+#tsLogBook h3,
+#tsLogBook .tl-text,
+#tsLogBook .tl-info span
+	font-size: 12px
+	font-weight: bolder
+	text-transform: uppercase
 
 #tsLogs
 	border-radius: 5px
@@ -16,9 +20,15 @@
 	border: 1px solid #bbbbbb
 
 #tsLogs .ts-log
-	font-size: 11px
 	padding: 10px
+	word-break: break-all
 	&:nth-child(even)
 		background: rgba(0, 0, 0, 0.05)
-	&:not(:hover) .tl-time
+	&:not(:hover) .tl-info
 		display: none
+
+#tsLogs .tl-info span
+	padding-right: 5px
+
+#tsLogs .ts-log.log
+	opacity: 0.5
