--- a/visual/_global.sass
+++ b/visual/_global.sass
@@ -48,6 +48,7 @@ body.hb-is-afk #hbIsAfk,
 body.hb-auto-b #hbAutoB,
 body.hb-auto-q #hbAutoQ,
 body.hb-nextdj #hbNextDJ,
+body.hb-escort #hbEscort,
 body.hb-people #hbPeople,
 body.hb-player #hbPlayer,
 body.hb-bubble #hbBubbles,
