Fix Current Song Marked Recent Add External Emoji Suggestions

--- a/themes/engine/_chat.sass
+++ b/themes/engine/_chat.sass
@@ -56,3 +56,11 @@
 .chat-bar.chat-focused
 	.chatsound-container
 		@extend .ts-hidden
+
+#tsTyping
+	@extend .ts-content-dim
+	border-left: 2px solid $bg-light-1
+	border-right: 2px solid $bg-light-1
+	
+#tsTyping .icon:hover
+	background: $bg-light-1
