--- a/themes/engine/_songs.sass
+++ b/themes/engine/_songs.sass
@@ -55,7 +55,7 @@
 		@extend .ts-main-filter
 
 
-body.ts-played #queue .song.ts-recent 
+body.ts-played #queue .song.ts-recent:not(.current-song)
 	box-shadow: inset -6px 0 0 0px $recent !important
 	.details
 		color: $recent
