Start Initial Stylesheet Import
Move themes.js from plugin/ to script/
Successfully Inject Initial Core Styles

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -1,8 +1,8 @@
 // Always-On Styling
 
-// @import "visual/basics"
-// @import "visual/global"
+@import "visual/import"
+@import "visual/global"
 // @import "visual/inputs"
 // @import "visual/panels"
-// @import "visual/logger"
-// @import "visual/volume"
+@import "visual/logger"
+@import "visual/volume"
