Initial Patron List / Styling
Fix Old References In events.js
Add patron.json To confs/
Add patron.js To script/
Add Patron Chat Message Styling

--- a/visual/_global.sass
+++ b/visual/_global.sass
@@ -36,6 +36,17 @@
 	font-size: 11px
 	@extend .ts-faded
 
+.chat .message.patron
+	box-shadow: inset 5px 0 0 gold
+.chat .message.patron:hover
+	@extend .ts-brighten
+.chat .message.patron .speaker:after
+	font-style: italic
+	font-weight: normal
+	content: " turnstyles patron"
+.chat .message.patron:not(:hover) .speaker:after
+	display: none
+
 // Feature Toggles
 body.ts-logger #tsLogBook
 	display: block
