--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -2,7 +2,7 @@
 
 @import "visual/import"
 @import "visual/global"
-// @import "visual/inputs"
-// @import "visual/panels"
+@import "visual/inputs"
+@import "visual/panels"
 @import "visual/logger"
 @import "visual/volume"
