--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -3,6 +3,7 @@
 @import "visual/import"
 @import "visual/global"
 @import "visual/inputs"
+@import "visual/window"
 @import "visual/panels"
 @import "visual/logger"
 @import "visual/volume"
