--- a/styles/green.sass
+++ b/styles/green.sass
@@ -2,7 +2,7 @@ $accent: #3ca633
 $tinted: 20deg
 
 // generate our variables
-@import "../visual/basics"
+@import "../visual/import"
 
 // define filters
 // to apply color shifts
