--- a/styles/purple.sass
+++ b/styles/purple.sass
@@ -2,7 +2,7 @@ $accent: #886eef
 $tinted: 155deg
 
 // generate our variables
-@import "../visual/basics"
+@import "../visual/import"
 
 // define filters
 // to apply color shifts
