--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -2,7 +2,7 @@ $accent: #54bfb4
 $tinted: 75deg
 
 // generate our variables
-@import "../visual/basics"
+@import "../visual/import"
 
 // define filters
 // to apply color shifts
