--- a/themes/engine/_lobby.sass
+++ b/themes/engine/_lobby.sass
@@ -32,9 +32,7 @@
 		@extend .ts-no-shadow
 		font-weight: bold
 	#create-room:hover
-		@extend .ts-gradient
-	#create-room:hover span
-		color: $bg-dark-3
+		@extend .ts-content-hover
 	#create-room .create-header
 		display: none
 
