--- a/themes/engine/_panels.sass
+++ b/themes/engine/_panels.sass
@@ -1,29 +1,28 @@
-#tsHotBar, #tsPanels
+#tsPanels
 	@extend .ts-content
+#tsHotBar
+	@extend .ts-content-dim
 
 #tsHotBar .ts-button,
 #tsHotBar .ts-toggle,
 #tsHotBar .ts-inputs,
 #tsHotBar .ts-choice,
 #tsPanels section
-	@extend .ts-content-hover
+	@extend .ts-content
 
 #tsHotBar #tsOpenBtn,
 #tsPanels .ts-tab.active,
+#tsPanels article.ts-help::before,
 .ts-toggle input:checked + span:after,
 	@extend .ts-co-main
 
-#tsPanels section kbd,
-#tsPanels section .ts-button,
-#tsPanels section .ts-toggle,
-#tsPanels section .ts-inputs,
-#tsPanels section .ts-choice
+#tsPanels article
+	border-color: $bg-light-4
+
+#tsPanels article,
+#tsPanels .ts-button
+	@extend .ts-content-hover
+	
+#tsPanels article .ts-choice,
+#tsPanels article .ts-inputs
 	@extend .ts-content-alt
-#tsPanels section kbd
-	border-color: $c-back
-#tsPanels section h3
-	border-bottom-color: $bg-light-1
-#tsPanels section p
-	color: $c-mute
-#tsPanels section .ts-inputs
-	border-bottom-color: $bg-dark-1
