--- a/visual/_global.sass
+++ b/visual/_global.sass
@@ -4,6 +4,9 @@
 #room-view
 	background: #000000
 
+#turntable #topBG .header-bar:hover
+	margin-bottom: 50px
+
 .chrome .header-bar
   font-size: 13px
   line-height: 42px
