--- a/visual/_panels.sass
+++ b/visual/_panels.sass
@@ -66,12 +66,12 @@
 	p
 		margin: 0
 		display: none
+		font-size: 0.9em
 		padding: 0 10px 5px
 		@extend .ts-faded
 	&.ts-help p
 		display: block
 	p, strong
-		font-size: 0.9em
 		font-weight: bold
 	strong + p
 		padding-top: 5px
@@ -79,6 +79,9 @@
 		display: inline-block
 	strong
 		margin: 0 10px
+		font-size: 1.1em
+		padding-top: 2px
+		display: inline-block
 	&:before
 		content: "?"
 		color: $c-text
