--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -2,7 +2,7 @@ $accent: #ca5dc8
 $tinted: 200deg
 
 // generate our variables
-@import "../visual/basics"
+@import "../visual/import"
 
 // define filters
 // to apply color shifts
