--- a/themes/midnight.sass
+++ b/themes/midnight.sass
@@ -19,7 +19,7 @@ $recent: #e64f4f
 $tinted: 120deg
 
 // generate our variables
-@import "../visual/basics"
+@import "../visual/import"
 
 // define filters
 // to apply color shifts
