Integrate Plugins Back In
Refactor Plugins Where Necessary
Move Escort Code From Session to deck.js

--- a/visual/_global.sass
+++ b/visual/_global.sass
@@ -46,7 +46,7 @@
 .chat .message.patron .speaker:after
 	font-style: italic
 	font-weight: normal
-	content: " turnstyles patron"
+	content: " turnStyles VIP"
 .chat .message.patron:not(:hover) .speaker:after
 	display: none
 
