First Round Of Alpha Testing
Add Names To All Bound Functions
Reset afk.idle To false On Load
Use parseInt To Handle Stored Numbers
Fix updateHotBar Not Updating HotBar
Fix Wrong config Option For loadVolume
Fix Wrong Variable In isEmoji
Fix Wrong Element Pointers In textFade
Fix Styling/Addition Of Recents
Fix Style/Functions In Suggest Window

--- a/sass/global/_body.sass
+++ b/sass/global/_body.sass
@@ -76,8 +76,8 @@ body.hb-share #hbShare
 	@extend .ts-hidden
 
 // Recently Played
-body.ts-played #queue .song.ts-recent:not(.current-song)
-	box-shadow: inset -6px 0 0 0px $recent
+body.ts-recent #queue .song.ts-played:not(.current-song)
+	box-shadow: inset -3px 0 0 0px $recent !important
 	.details
 		color: $recent
 	&:hover .details:after
