--- a/sass/themes/engine/_chat.sass
+++ b/sass/themes/engine/_chat.sass
@@ -57,10 +57,10 @@
 	.chatsound-container
 		@extend .ts-hidden
 
-#tsTyping
+#tsSuggest
 	@extend .ts-content-dim
 	border-left: 2px solid $bg-light-1
 	border-right: 2px solid $bg-light-1
 	
-#tsTyping .icon:hover
+#tsSuggest .icon:hover
 	background: $bg-light-1
