--- a/sass/themes/cosmic.sass
+++ b/sass/themes/cosmic.sass
@@ -1,18 +1,18 @@
 $accent: #c77dde
 
-$c-text: #edeaf7
+$c-text: #d1d1d1
 $c-back: #27233c
 
 // event based
 // chat alert colors
-$c-snag: #e853a6
-$c-join: #4abf54
-$c-left: #e64f4f
+$c-snag: #d55ec5
+$c-join: #50b671
+$c-left: #dc6464
 
 // action: mod removed
 // recent: recently played text
-$action: #e64f4f
-$recent: #e64f4f
+$action: #dc6464
+$recent: #dc6464
 
 // hue shift amount
 // on gold elements
