--- a/sass/themes/dark.sass
+++ b/sass/themes/dark.sass
@@ -1,18 +1,18 @@
 $accent: #eabd2f
 
-$c-text: #efefef
+$c-text: #cecece
 $c-back: #2f2f2f
 
 // event based
 // chat alert colors
-$c-snag: #e853a6
-$c-join: #4abf54
-$c-left: #e64f4f
+$c-snag: #e074b1
+$c-join: #67b76e
+$c-left: #ea6868
 
 // action: mod removed
 // recent: recently played text
-$action: #e64f4f
-$recent: #e64f4f
+$action: #ea6868
+$recent: #ea6868
 
 // hue shift amount
 // on gold elements
