--- a/sass/themes/forest.sass
+++ b/sass/themes/forest.sass
@@ -1,18 +1,18 @@
 $accent: #5b9f60
 
-$c-text: #ebf6ed
-$c-back: #1b2e1c
+$c-text: #cecece
+$c-back: #192822
 
 // event based
 // chat alert colors
-$c-snag: #e853a6
-$c-join: #4abf54
-$c-left: #e64f4f
+$c-snag: #de74b2
+$c-join: #59b6a0
+$c-left: #e38255
 
 // action: mod removed
 // recent: recently played text
-$action: #e64f4f
-$recent: #e64f4f
+$action: #e38255
+$recent: #e38255
 
 // hue shift amount
 // on gold elements
