--- a/sass/themes/midnight.sass
+++ b/sass/themes/midnight.sass
@@ -5,14 +5,14 @@ $c-back: #1e2746
 
 // event based
 // chat alert colors
-$c-snag: #e853a6
-$c-join: #4abf54
-$c-left: #e64f4f
+$c-snag: #ed72b7
+$c-join: #7fc277
+$c-left: #ed6f6f
 
 // action: mod removed
 // recent: recently played text
-$action: #e64f4f
-$recent: #e64f4f
+$action: #ed6f6f
+$recent: #ed6f6f
 
 // hue shift amount
 // on gold elements
