--- a/sass/themes/night.sass
+++ b/sass/themes/night.sass
@@ -5,14 +5,14 @@ $c-back: #191919
 
 // event based
 // chat alert colors
-$c-snag: #a0629e
-$c-join: #69966b
-$c-left: #a74646
+$c-snag: #c865a9
+$c-join: #65a869
+$c-left: #cf6161
 
 // action: mod removed
 // recent: recently played text
-$action: #a74646
-$recent: #a74646
+$action: #cf6161
+$recent: #cf6161
 
 // hue shift amount
 // on gold elements
