beta.3 Round of Bugfixes
Add Gold Tint Back To night Theme
Reset idleTimer On AFK Panel Update
Remove Shadow/Border On Global DJ Buttons

--- a/sass/global/_body.sass
+++ b/sass/global/_body.sass
@@ -24,6 +24,13 @@
 .profile .section.statslink
 	text-align: center !important
 
+// remove nib on dj buttons
+.invite-dj, .become-dj
+	@extend .ts-no-shadow
+	border: none
+	&:before, &:after
+		@extend .ts-hidden
+
 // song counter
 #playlist-display em 
 	line-height: 27px
