Adding First New Features
Clean Up Various Panel Help Texts
Escape Key Now Closes The TS Panel
Remove Small Gap Between Logo And Menu
Add "Fan The Developer" To about Tab
Add isfan To Default Config Options
Add isfan Logic To roomTab.js
Standardize Bound Functions Names

--- a/sass/colors/engine/_colorize.sass
+++ b/sass/colors/engine/_colorize.sass
@@ -28,6 +28,8 @@ body:not(.th-none)
 		@extend %hard-filter
 	#{$ts-bg-curr}
 		background: $bg-active !important
+	#tsPanels article.fan
+		border-color: $accent
 
 body.th-none
 	#buddyListHeader,
