--- a/sass/global/_panel-layout.sass
+++ b/sass/global/_panel-layout.sass
@@ -9,7 +9,8 @@
 #tsMenu
 	font-size: 17px
 	margin-top: 5px
-	margin-right: 1px
+	margin-right: -1px
+	padding-right: 2px
 #tsLogo, #tsMenu
 	cursor: pointer
 	display: block !important
