--- a/sass/themes/engine/_panels.sass
+++ b/sass/themes/engine/_panels.sass
@@ -11,6 +11,7 @@
 #tsPanels section
 	@extend .ts-content
 
+#tsPanels #tsGold,
 #tsHotBar #tsOpenBtn,
 #tsPanels .ts-tab.active,
 #tsPanels article.ts-help::before,
@@ -29,3 +30,6 @@
 #tsPanels article .ts-choice,
 #tsPanels article .ts-inputs
 	@extend .ts-content-alt
+
+#tsPanels article.fan
+	border-color: $accent
