--- a/sass/global/_panel-tabbed.sass
+++ b/sass/global/_panel-tabbed.sass
@@ -17,7 +17,7 @@
 	display: none
 	flex-wrap: wrap
 	overflow-y: auto
-	padding: 0 20px 0 10px
+	padding: 0 20px 0 15px
 	&.active
 		display: flex
 
@@ -43,11 +43,11 @@
 
 #tsPanels section
 	font-size: 14px
-	margin-left: 10px
+	margin-left: 5px
 	&.full
-		width: calc(100% - 10px)
+		width: calc(100% - 5px)
 	&:not(.full)
-		width: calc(50% - 10px)
+		width: calc(50% - 5px)
 	h4
 		margin: 0 0 5px
 
@@ -59,6 +59,8 @@
 	border: 1px solid $bg-light-3
 	border-bottom-color: $bg-light-4
 	@extend .ts-content-hover
+	&.fan
+		border-color: mix(gold, $c-back, 50%)
 	p
 		margin: 0
 		display: none
@@ -66,10 +68,10 @@
 		padding: 5px 10px
 	&.ts-help p
 		display: block
-	strong + .ts-choice
+	> strong + .ts-choice
 		margin: -1px 0
 		display: inline-block
-	strong
+	> strong
 		font-size: 0.9em
 		margin: 4px 10px 0
 		vertical-align: top
@@ -83,6 +85,10 @@
 		@include abs(8px, 10px)
 	&.ts-help:before
 		color: $accent
+	&.ts-links
+		padding-bottom: 10px
+	&.ts-links .ts-button
+		text-align: center
 	.ts-button,
 	.ts-inputs
 		display: block
@@ -97,3 +103,11 @@
 		margin-right: 5px
 	.ts-button:not(.ts-toggle):not(.ts-choice)
 		margin-left: auto
+
+#tsPanels #tsGold
+	color: gold
+	padding: 6px 10px
+	text-align: center
+	border: 1px dotted
+	margin-bottom: 5px
+	text-decoration: none
