--- a/sass/global/_panel-layout.sass
+++ b/sass/global/_panel-layout.sass
@@ -19,6 +19,11 @@
 #tsBackup input
 	display: none
 
+@supports (-moz-appearance:none)
+	#tsMenu
+		font-size: 23px !important
+		margin-top: 3px !important
+
 #tsHotBar
 	width: 100%
 	display: none
