Fix Styling When Dragging Songs.

--- a/sass/global/_body.sass
+++ b/sass/global/_body.sass
@@ -89,7 +89,7 @@ body.hb-share #hbShare
 	@extend .ts-hidden
 
 // Recently Played
-body.ts-recent #queue .song.ts-played:not(.current-song)
+body.ts-recent #maindiv .song.ts-played:not(.current-song)
 	@include striped(#eee, mix(#eee, #f00, 50%))
 	.title, .details
 		color: #f00
