--- a/sass/themes/engine/_songs.sass
+++ b/sass/themes/engine/_songs.sass
@@ -14,9 +14,9 @@
 		background: $bg-dark-1
 		border-bottom: 1px solid $bg-dark-3
 
-#maindiv .song-list .song
-	@extend .ts-striped-list
+#maindiv .song
 	@extend .ts-no-shadow
+	@extend .ts-content-hover
 	.title
 		color: $c-text
 	.vinyl
@@ -48,6 +48,9 @@
 		font-size: 22px
 		margin: -5px 0 0 1px
 
+#maindiv .song-list .song
+	@extend .ts-striped-list
+
 #queue.batch li.song.selected
 	@extend .ts-bg-curr
 	@extend .ts-no-shadow
@@ -55,7 +58,7 @@
 		@extend .ts-main-filter
 
 
-body.ts-recent #queue .song.ts-played:not(.current-song)
+body.ts-recent #maindiv .song.ts-played:not(.current-song)
 	@include striped($c-back, $recent)
 	.title, .details
 		color: $recent
