Rework Theme Icon Styling
Add New .ts-icon-filter Extend
Add Sepia Argument To paint Mixin
Replace Select Unicode Elements
Fix Lobby Empty Buddy List Styling

--- a/sass/colors/engine/_colorize.sass
+++ b/sass/colors/engine/_colorize.sass
@@ -30,6 +30,8 @@ body:not(.th-none)
 		background: $bg-active !important
 	#tsPanels article.fan
 		border-color: $accent
+	#overlay .modal .close-x
+		@extend %room-filter
 
 body.th-none
 	#buddyListHeader,
