--- a/sass/themes/cosmic.sass
+++ b/sass/themes/cosmic.sass
@@ -37,6 +37,9 @@ $tinted: 170deg
 .ts-hard-filter
 	@include paint($tinted + 70deg, 2.7, 0.45, 1)
 
+.ts-icon-filter
+	@include paint($tinted + 70deg, 1, 1, 1, 0.5)
+
 .ts-mute-filter
 	@include paint($tinted + 40deg, 1.4, 0.4)
 
