--- a/sass/themes/dark.sass
+++ b/sass/themes/dark.sass
@@ -37,6 +37,9 @@ $tinted: 10deg
 .ts-hard-filter
 	@include paint($tinted, 3, 0.7, 1)
 
+.ts-icon-filter
+	@include paint($tinted, 3, 0.7, 1)
+
 .ts-mute-filter
 	opacity: 0.75
 
