--- a/sass/themes/engine/_lobby.sass
+++ b/sass/themes/engine/_lobby.sass
@@ -73,7 +73,9 @@
 		@extend .ts-co-main
 	.buddyCountIcon
 		@extend .ts-hidden
+	.buddyListNone,
 	#buddyListContent
+		@extend .ts-content-dim
 
 #topBG .buddyListRoom
 	@extend .ts-no-shadow
