--- a/sass/themes/forest.sass
+++ b/sass/themes/forest.sass
@@ -37,6 +37,9 @@ $tinted: 20deg
 .ts-hard-filter
 	@include paint($tinted + 70deg, 2.7, 0.45, 1)
 
+.ts-icon-filter
+	@include paint($tinted + 70deg, 2.7, 0.45, 1)
+
 .ts-mute-filter
 	@include paint($tinted + 20deg, 1.4, 0.4)
 
