--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -14,8 +14,8 @@
 @mixin gloss($h, $s: 1, $b: 1)
 	@include hsbpig($h, $s, $b, 0.7)
 
-@mixin paint($h, $s: 1, $b: 1, $i: 0)
-	@include hsbpig($h, $s, $b, 1, $i, 1)
+@mixin paint($h, $s: 1, $b: 1, $i: 0, $p: 1)
+	@include hsbpig($h, $s, $b, $p, $i, 1)
 
 // sizing / positioning
 @mixin rel($t: false, $r: false, $b: false, $l: false)
