--- a/sass/global/_panel-inputs.sass
+++ b/sass/global/_panel-inputs.sass
@@ -36,7 +36,7 @@
 .ts-data .ts-button
 	display: inline-flex !important
 
-#tsSuggest
+#tsGuess
 	@include abs(false, 256px, 0px, false)
 	z-index: 10000
 	overflow-y: auto
