--- a/sass/global/_panel-layout.sass
+++ b/sass/global/_panel-layout.sass
@@ -24,7 +24,7 @@
 		font-size: 23px !important
 		margin-top: 3px !important
 
-#tsHotBar
+#tsHotbar
 	width: 100%
 	display: none
 	line-height: 1em
@@ -51,17 +51,17 @@
 	&.active
 		display: flex
 
-#tsHotBar *,
+#tsHotbar *,
 #tsWindow *
 	box-sizing: border-box
 
 .header-bar:hover 
 	#tsLogo
 		display: none
-	#tsHotBar
+	#tsHotbar
 		display: block
 
-#topBG #tsHotBar .wrap
+#topBG #tsHotbar .wrap
 	margin: 0 auto
 	max-width: 1000px
 
