--- a/sass/themes/engine/_header.sass
+++ b/sass/themes/engine/_header.sass
@@ -20,7 +20,7 @@ div#header,
 #maindiv .header-bar
 	box-sizing: border-box
 	border-bottom: 2px solid $bg-light-2
-	#tsHotBar
+	#tsHotbar
 		margin-top: 2px
 	.header-room
 		padding: 0 0 0 57px
