--- a/sass/themes/engine/_panels.sass
+++ b/sass/themes/engine/_panels.sass
@@ -1,18 +1,18 @@
 #tsPanels
 	@extend .ts-content
-#tsHotBar,
+#tsHotbar,
 #tsPanels nav
 	@extend .ts-content-dim
 
-#tsHotBar .ts-button,
-#tsHotBar .ts-toggle,
-#tsHotBar .ts-inputs,
-#tsHotBar .ts-choice,
+#tsHotbar .ts-button,
+#tsHotbar .ts-toggle,
+#tsHotbar .ts-inputs,
+#tsHotbar .ts-choice,
 #tsPanels section
 	@extend .ts-content
 
 #tsPanels #tsGold,
-#tsHotBar #tsOpenBtn,
+#tsHotbar #tsOpenBtn,
 #tsPanels .ts-tab.active,
 #tsPanels article.ts-help::before,
 .ts-toggle input:checked + span:after,
