Update LogBook CSS ID

--- a/sass/global/_body.sass
+++ b/sass/global/_body.sass
@@ -64,7 +64,7 @@
 		-moz-transform-origin: center
 
 // feature toggles
-body.ts-logger #tsLogBook
+body.ts-logger #tsLog
 	display: block
 body.ts-volume .dropdown-volume-container
 	@extend .ts-hidden
